<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.kalafatic.evolution</groupId>
	<artifactId>eu.kalafatic.evolution.aggregator</artifactId>
	<version>2.6.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>4.0.5</tycho.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<modules>
		<module>eu.kalafatic.evolution.model</module>
		<module>eu.kalafatic.evolution.model.edit</module>
		<module>eu.kalafatic.evolution.model.editor</module>
		<module>eu.kalafatic.evolution.controller</module>
		<module>eu.kalafatic.evolution.controller.tests</module>
		<module>eu.kalafatic.evolution.view</module>
		<module>eu.kalafatic.evolution.feature</module>
		<module>eu.kalafatic.evolution.module</module>
		<module>eu.kalafatic.evolution.quality.tests</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<executionEnvironment>JavaSE-21</executionEnvironment>
					<pomDependencies>consider</pomDependencies>
					<pomDependencies>wrapAsBundle</pomDependencies>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>eclipse-release</id>
			<url>https://download.eclipse.org/releases/2025-12</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>orbit</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/tools/orbit/simrel/orbit-aggregation/release/latest/</url>
		</repository>
	</repositories>
</project>
